--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -2956,10 +2956,10 @@
       #sandbox .main-media--hidden-caption .element-interactive figcaption {
         border-bottom: 0; }
   #sandbox .meta {
-    margin: -1px 0;
     border-bottom: 1px dotted #dcdad5;
-    width: 100%;
-    display: table; }
+    display: table;
+    margin: -1px 0;
+    width: 100%; }
     @media all and (max-width: 40.62em) {
       #sandbox .meta {
         font-size: 1.4rem;
@@ -2972,18 +2972,23 @@
       #sandbox .meta {
         border: none; } }
     #sandbox .meta .avatar--author {
-      margin: 0px 9px 12px 0px;
+      margin: 0px 9px 0px 0px;
       float: left; }
-  #sandbox .meta__misc {
-    padding: 8px 12px 24px 12px; }
-    @media all and (min-width: 75em) {
-      #sandbox .meta__misc {
-        margin: 0 auto 0 240px;
-        padding-left: 0;
-        width: 620px; } }
-  #sandbox .meta__pubdate {
-    color: #999;
-    font-family: "Guardian Agate Sans 1 Web", sans-serif; }
+    #sandbox .meta__misc {
+      padding: 8px 12px 24px 12px; }
+      @media all and (min-width: 75em) {
+        #sandbox .meta__misc {
+          margin: 0 auto 0 240px;
+          padding-left: 0;
+          width: 620px; } }
+      #sandbox .meta__misc:before, #sandbox .meta__misc:after {
+        content: " ";
+        display: table; }
+      #sandbox .meta__misc:after {
+        clear: both; }
+    #sandbox .meta__pubdate {
+      color: #999;
+      font-family: "Guardian Agate Sans 1 Web", sans-serif; }
   #sandbox .review-rating {
     color: #484848; }
     @media all and (min-width: 28.13em) {
